--- a/src/gds-upgrade/sass/_navigation.scss
+++ b/src/gds-upgrade/sass/_navigation.scss
@@ -32,14 +32,14 @@
     display: block;
     padding: 8px 15px 6px;
     text-decoration: none;
-    color: map.get($govuk-colours, "black");
+    color: govuk-colour("black");
     text-decoration: underline;
     &.current {
       font-weight: bold;
       text-decoration: none;
       &:after {
         display: block;
-        background: map.get($govuk-colours, "blue");
+        background: govuk-colour("blue");
         content: "";
         width:5px;
         top: 0;
@@ -94,12 +94,12 @@
     display: block;
     padding: 7px 15px 5px;
     text-decoration: none;
-    color: map.get($govuk-colours, "black");
+    color: govuk-colour("black");
     &.current {
       font-weight: bold;
       &:after {
         display: block;
-        background: map.get($govuk-colours, "blue");
+        background: govuk-colour("blue");
         content: "";
         width:5px;
         top: 0;
