--- a/src/gds-upgrade/sass/pages/_search-results.scss
+++ b/src/gds-upgrade/sass/pages/_search-results.scss
@@ -25,7 +25,7 @@ ol.search-results {
       margin-bottom: 5px;
     }
     &.added {
-      background: map.get($govuk-colours, "light-grey");
+      background: govuk-colour("light-grey");
       border: 3px solid map.get($govuk-colours, "mid-grey");
       border-top-width: 2px;
       p {
@@ -43,7 +43,7 @@ ol.search-results {
 }
 
 .filter-box {
-  background: map.get($govuk-colours, "light-grey");
+  background: govuk-colour("light-grey");
   margin-bottom: 15px;
   @include govuk-media-query(tablet) {
     margin-bottom: 30px;
@@ -65,9 +65,9 @@ ol.search-results {
     cursor: pointer;
     z-index: 100;
     padding: 0 30px 0 0;
-    background: map.get($govuk-colours, "light-grey") url("../images/option-select-toggle-sprite.png") no-repeat right 5px;
+    background: govuk-colour("light-grey") url("../images/option-select-toggle-sprite.png") no-repeat right 5px;
     &:hover, &:focus {
-      background-color: map.get($govuk-colours, "mid-grey");
+      background-color: govuk-colour("mid-grey");
       &+.options-container {
         border-color: map.get($govuk-colours, "mid-grey");
       }
@@ -102,7 +102,7 @@ ol.search-results {
         font-size: 16px;
       }
       &:hover, &:focus {
-        background: map.get($govuk-colours, "light-grey");
+        background: govuk-colour("light-grey");
       }
       &:last-child {
         border: none;
