--- a/src/gds-upgrade/sass/screen.scss
+++ b/src/gds-upgrade/sass/screen.scss
@@ -27,7 +27,7 @@ $govuk-assets-path: "/gds-upgrade/";
 @import "pages/task-list";
 
 html, body {
-  background: map.get($govuk-colours, "light-grey");
+  background: govuk-colour("light-grey");
   &.white-bg {
     background: #fff;
   }
@@ -66,7 +66,7 @@ nav.prototype {
     margin: 0 auto;
     li {
       display: inline-block;
-      color: map.get($govuk-colours, "light-grey");
+      color: govuk-colour("light-grey");
       margin: 0 5px;
       a {
         display: inline-block;
