Updates for help pages

--- a/src/gds-upgrade/sass/screen.scss
+++ b/src/gds-upgrade/sass/screen.scss
@@ -8,6 +8,7 @@ $govuk-assets-path: "/gds-upgrade/";
 @import "variables";
 @import "mixins";
 @import "layout";
+@import "links";
 @import "components";
 @import "forms";
 @import "tables";
