--- a/src/gds-upgrade/sass/_help.scss
+++ b/src/gds-upgrade/sass/_help.scss
@@ -1,61 +1,76 @@
-.toggle-help {
-  @extend .govuk-label__hint;
-  border-left: 3px solid map.get($govuk-colours, "mid-grey");
-  padding-top: 5px;
-  padding-left: 10px;
+.custom-section-break {
+  @extend .govuk-section-break;
+  @extend .govuk-section-break--m;
+  @extend .govuk-section-break--visible;
+  margin-top: govuk-spacing(2);
+  border-width: 3px;
+  border-color: govuk-colour("black");
 }
 
-.toggletip {
-  position: relative;
-  button, a {
-    font-weight:700;
-    font-size: 16px;
-    background: govuk-colour("blue");
-    text-align: center;
-    border-radius: 50%;
-    color: #fff;
-    border: 1px solid rgba(0, 0, 0, 0.1);
-    height: 1.4em;
-    line-height: 1.5em !important;
-    margin: 0.25em;
-    padding: 0 .4em;
-    display: inline-block;
-    text-decoration: none;
-  }
-  a {
-    height: 1.2em;
-    line-height: 1.4 !important;
-  }
-  .bubble {
-    background: govuk-colour("black");
-    color: #fff;
-    border-radius: 3px;
-    padding:5px 10px;
-    position: absolute;
-    bottom: 100%;
-    left: 0;
-    margin-bottom: 5px;
-    font-size: 16px;
-    min-width: 150px;
-    &.long {
-      min-width: 300px;
-    }
-    &:before {
-      content: "";
-      left:10px;
-      bottom:0;
-      display: block;
-      position: absolute;
-      border: 5px solid transparent;
-      border-top-color: map.get($govuk-colours, "black");
-      margin-bottom: -10px;
-    }
-  }
+.end-of-section {
+  @extend .font-style-italic;
+  margin-top: govuk-spacing(7);
+  margin-bottom: govuk-spacing(0);
 }
 
-.code {
-  padding: 15px;
-  border-radius: 5px;
-  white-space: normal;
-  line-height: 1.4em;
-}
+// .toggle-help {
+//   @extend .govuk-label__hint;
+//   border-left: 3px solid map.get($govuk-colours, "mid-grey");
+//   padding-top: 5px;
+//   padding-left: 10px;
+// }
+
+// .toggletip {
+//   position: relative;
+//   button, a {
+//     font-weight:700;
+//     font-size: 16px;
+//     background: govuk-colour("blue");
+//     text-align: center;
+//     border-radius: 50%;
+//     color: #fff;
+//     border: 1px solid rgba(0, 0, 0, 0.1);
+//     height: 1.4em;
+//     line-height: 1.5em !important;
+//     margin: 0.25em;
+//     padding: 0 .4em;
+//     display: inline-block;
+//     text-decoration: none;
+//   }
+//   a {
+//     height: 1.2em;
+//     line-height: 1.4 !important;
+//   }
+//   .bubble {
+//     background: govuk-colour("black");
+//     color: #fff;
+//     border-radius: 3px;
+//     padding:5px 10px;
+//     position: absolute;
+//     bottom: 100%;
+//     left: 0;
+//     margin-bottom: 5px;
+//     font-size: 16px;
+//     min-width: 150px;
+//     &.long {
+//       min-width: 300px;
+//     }
+//     &:before {
+//       content: "";
+//       left:10px;
+//       bottom:0;
+//       display: block;
+//       position: absolute;
+//       border: 5px solid transparent;
+//       border-top-color: map.get($govuk-colours, "black");
+//       margin-bottom: -10px;
+//     }
+//   }
+// }
+
+// .code {
+//   padding: 15px;
+//   border-radius: 5px;
+//   white-space: normal;
+//   line-height: 1.4em;
+// }
