Updates to links, including back link, in bold

--- a/src/gds-upgrade/sass/_links.scss
+++ b/src/gds-upgrade/sass/_links.scss
@@ -2,3 +2,14 @@
     @extend .govuk-link;
     font-weight: bold;
 }
+
+.govuk-back-link-bold {
+    @extend .govuk-back-link;
+    font-weight: bold;
+
+    &::before {
+        bottom: 1px;
+        border-width: 2px 2px 0 0;
+        border-color: govuk-colour("black");
+    }
+}
