--- a/src/gds-upgrade/sass/_help.scss
+++ b/src/gds-upgrade/sass/_help.scss
@@ -1,6 +1,5 @@
 .help-section-title {
-  @include govuk-responsive-margin(8, "top");
-  @include govuk-responsive-margin(8, "bottom");
+  margin: govuk-spacing(6) govuk-spacing(6) govuk-spacing(8) 0;
 }
 
 .custom-section-break {
