--- a/src/gds-upgrade/sass/_layout.scss
+++ b/src/gds-upgrade/sass/_layout.scss
@@ -145,6 +145,12 @@ dl.inline {
   visibility: visible;
 }
 
+.hidden,
+.js-enabled .js-hidden {
+  display: none;
+  visibility: hidden
+}
+
 .heading-group {
   margin: 15px 0;
   @include govuk-clearfix;
