Added two new classes to show/hide stuff based on js enabled/disabled, Tidy up and remove unnecessary stuff

--- a/app/gds-upgrade/views/concepts/components/cookie-banner.html
+++ b/app/gds-upgrade/views/concepts/components/cookie-banner.html
@@ -22,7 +22,7 @@
       </div>
   
       <div class="govuk-button-group">
-        <button id="cookie-accept" value="accept" type="button" name="cookies" class="govuk-button" data-module="govuk-button">
+        <button id="cookie-accept" value="accept" type="button" name="cookies" class="govuk-button hidden-when-js-disabled" data-module="govuk-button">
             Accept analytics cookies
         </button>
         <!-- TODO decide if we want button or link to set preferences -->
