--- a/src/gds-upgrade/sass/_tables.scss
+++ b/src/gds-upgrade/sass/_tables.scss
@@ -1,4 +1,4 @@
-table {
+.custom-table {
   border-spacing: 0;
   border-top: 1px solid map.get($govuk-colours, "black");
   border-bottom: 2px solid map.get($govuk-colours, "black");
@@ -13,117 +13,117 @@ table {
   thead th {
     border-bottom: 2px solid map.get($govuk-colours, "black");
   }
-}
 
-table.no-borders {
-  border: none;
-}
-
-table.condensed {
-  th, td {
-    font-size: 14px;
-    line-height: 1.1em;
-  }
-}
-
-th.sorted, th a.sorted {
-  position: relative;
-  padding-left: 15px;
-  &:before {
-    display: block;
-    content: "";
-    position: absolute;
-    left: 0;
-    top: 13px;
-    border: 7px solid transparent;
-    border-top-color: map.get($govuk-colours, "blue");
-    border-left-width: 5px;
-    border-right-width: 5px;
-    @include govuk-media-query(tablet) {
-      top: 16px;
-    }
-  }
-  &.dir-a {
+  th.sorted, th a.sorted {
+    position: relative;
+    padding-left: 15px;
     &:before {
-      border-top-color: transparent;
-      border-bottom-color: map.get($govuk-colours, "blue");
-      top: 7px;
+      display: block;
+      content: "";
+      position: absolute;
+      left: 0;
+      top: 13px;
+      border: 7px solid transparent;
+      border-top-color: map.get($govuk-colours, "blue");
+      border-left-width: 5px;
+      border-right-width: 5px;
       @include govuk-media-query(tablet) {
-        top: 10px;
+        top: 16px;
+      }
+    }
+    &.dir-a {
+      &:before {
+        border-top-color: transparent;
+        border-bottom-color: map.get($govuk-colours, "blue");
+        top: 7px;
+        @include govuk-media-query(tablet) {
+          top: 10px;
+        }
       }
     }
   }
-}
-
-th a {
-  color:map.get($govuk-colours, "blue");
-  text-decoration: none;
-  &:visited {
-    color: govuk-colour("blue");
+  
+  th a {
+    color:map.get($govuk-colours, "blue");
+    text-decoration: none;
+    &:visited {
+      color: govuk-colour("blue");
+    }
+    &:hover {
+      text-decoration: underline;
+    }
   }
-  &:hover {
-    text-decoration: underline;
-  }
-}
-
-th a.sorted {
-  font-weight: bold;
-  &:before {
-    top: 5px;
-  }
-  &.dir-a {
+  
+  th a.sorted {
+    font-weight: bold;
     &:before {
-      top: 0;
+      top: 5px;
+    }
+    &.dir-a {
+      &:before {
+        top: 0;
+      }
     }
   }
-}
 
-table.data {
-  th, td {
-    font-size: 15px;
-    line-height: 1.1em;
-    padding: 1em 1em .8em 0;
+  tr.pending {
+    color: govuk-colour("dark-grey");
+    font-style: italic;
   }
-  tr.sortable {
-    th {
-      font-weight: normal;
+  
+  .empty-state {
+    background: govuk-colour("light-grey");
+    padding: 15px;
+    text-align: center;
+    p {
+      margin: 0;
     }
   }
-}
-
-table tr th:last-child:not(:first-child),
-table tr td:last-child:not(:first-child) {
-  text-align: right;
-  padding: 1em 0 .8em 1em;
-}
-
-tr.pending {
-  color: govuk-colour("dark-grey");
-  font-style: italic;
-}
-
-.empty-state {
-  background: govuk-colour("light-grey");
-  padding: 15px;
-  text-align: center;
-  p {
-    margin: 0;
+  
+  td span.empty-state {
+    display: inline-block;
+    margin-bottom: 5px;
   }
-}
 
-td span.empty-state {
-  display: inline-block;
-  margin-bottom: 5px;
-}
-
-@for $i from 1 through 30 {
-  .cw-#{$i * 10} {
-    width: #{$i * 10}px;
+  tr th:last-child:not(:first-child),
+  tr td:last-child:not(:first-child) {
+    text-align: right;
+    padding: 1em 0 .8em 1em;
   }
-}
+    
+  @for $i from 1 through 30 {
+    .cw-#{$i * 10} {
+      width: #{$i * 10}px;
+    }
+  }
+  
+  @for $i from 1 through 20 {
+    .cwp-#{$i * 5} {
+      width: #{$i * 5%};
+    }
+  }
 
-@for $i from 1 through 20 {
-  .cwp-#{$i * 5} {
-    width: #{$i * 5%};
+  &.no-borders {
+    border: none;
+  }
+
+  &.condensed {
+    th, td {
+      font-size: 14px;
+      line-height: 1.1em;
+    }
+  }
+
+  &.data {
+    th, td {
+      font-size: 15px;
+      line-height: 1.1em;
+      padding: 1em 1em .8em 0;
+    }
+    tr.sortable {
+      th {
+        font-weight: normal;
+      }
+    }
   }
 }
