Fixes for navigation menu colours

--- a/src/gds-upgrade/sass/_navigation.scss
+++ b/src/gds-upgrade/sass/_navigation.scss
@@ -11,6 +11,7 @@
     list-style: none;
     position: relative;
     bottom: -1px;
+    padding-inline-start: 0;
     @include govuk-media-query(tablet) {
       margin: 0 15px;
     }
@@ -34,9 +35,13 @@
     text-decoration: none;
     color: govuk-colour("black");
     text-decoration: underline;
+    &.govuk-link-bold {
+      color: govuk-colour("black");
+    }
     &.current {
       font-weight: bold;
       text-decoration: none;
+      color: govuk-colour("blue");
       &:after {
         display: block;
         background: govuk-colour("blue");
