Style updates for my-services page (includes tasks list page)

--- a/src/gds-upgrade/sass/_layout.scss
+++ b/src/gds-upgrade/sass/_layout.scss
@@ -13,6 +13,12 @@
   }
 }
 
+// class to show/hide elements from JS
+.js-hidden {
+  display:none;
+  visibility:hidden;
+}
+
 // Lists without style by default
 ul, ol {
   list-style-type: none;
