--- a/src/gds-upgrade/sass/pages/_task-list.scss
+++ b/src/gds-upgrade/sass/pages/_task-list.scss
@@ -11,17 +11,14 @@
 $task-list-indent: 35px;
 
 .task-list {
-  @include govuk-responsive-margin(6, "top");
+  @include govuk-responsive-margin(8, "top");
   padding-inline-start: 0;
-  // @include govuk-media-query(tablet) {
-  //   margin-top: ($govuk-gutter * 2);
-  // }
 }
 
 
 .task-list-section {
   display: table;
-
+  margin-bottom: 0;
   @include govuk-font(24, $weight: bold);
   @include govuk-responsive-padding(1, "bottom");
 }
@@ -39,10 +36,7 @@ $task-list-indent: 35px;
 
 .task-list-items {
   @include govuk-responsive-margin(9, "bottom");
-  // @include govuk-media-query(tablet) {
-  //   margin-bottom: ($govuk-gutter * 2);
-  // }
-
+  @include govuk-font(19);
   @include govuk-media-query(tablet) {
     padding-left: $task-list-indent;
   }
@@ -73,23 +67,6 @@ $task-list-indent: 35px;
   min-width: 105px;
   text-align: center;
 }
-
-// .task-completed, .task-pending, .task-rejected {
-//   // @include phase-tag;
-
-//   float: right;
-//   margin-right: 0;
-//   padding-top: 3px;
-//   min-width: 105px;
-//   text-align: center;
-// }
-
-// .task-pending {
-//   background-color: govuk-colour("dark-grey");
-// }
-// .task-rejected {
-//   background-color: #d32f32;
-// }
 
 .pending-task {
   color: #6f777b;
