--- a/src/gds-upgrade/sass/pages/_services.scss
+++ b/src/gds-upgrade/sass/pages/_services.scss
@@ -292,6 +292,23 @@ html.modal-open body {
   }
 }
 
-ul {
-  padding-inline-start: 0;
+.search-button {
+  position: absolute;
+  bottom: 0;
+  border-radius: 0;
+  box-shadow: none;
+  z-index: 4;
+  right: 0;
+  top: 0;
+  width: 40px;
+  height: 40px;
+  border: none;
+  overflow: hidden;
+  text-indent: -5000px;
+  color: #fff;
+  background-color: govuk-colour("green");
+  background-image: url("../images/search-icon.svg");
+  background-repeat: no-repeat;
+  background-size: 20px 20px;
+  background-position: 9px 9px;
 }
