--- a/src/gds-upgrade/sass/pages/_services.scss
+++ b/src/gds-upgrade/sass/pages/_services.scss
@@ -311,4 +311,18 @@ html.modal-open body {
   background-repeat: no-repeat;
   background-size: 20px 20px;
   background-position: 9px 9px;
+
+  &:active {
+    top: 0;
+    box-shadow: none;
+  }
+  &:focus {
+    outline: 3px solid govuk-colour("yellow");
+    outline-offset: 0;
+  }
+
+  &:focus:not(:active):not(:hover) {
+    background-color: govuk-colour("green");
+    box-shadow: none;
+  }
 }
