--- a/src/gds-upgrade/sass/_layout.scss
+++ b/src/gds-upgrade/sass/_layout.scss
@@ -251,3 +251,27 @@ img.spacing {
     display: inline;
   }
 }
+
+.code {
+  white-space: normal;
+  line-height: 1.4em;
+  color: govuk-colour('dark-grey');
+  background-color: govuk-colour('light-grey');
+  text-shadow: 0 1px #fff;
+  font-family: Consolas,Monaco,"Andale Mono","Ubuntu Mono",monospace;
+  font-size: 14px;
+  direction: ltr;
+  text-align: left;
+  word-spacing: normal;
+  word-break: normal;
+  -moz-tab-size: 4;
+  -o-tab-size: 4;
+  tab-size: 4;
+  -webkit-hyphens: none;
+  -moz-hyphens: none;
+  -ms-hyphens: none;
+  hyphens: none;
+  border: 1px solid #bfc1c3;
+  border-radius: 5px;
+  padding: 15px;
+}
