Updated style for tables to have full width

--- a/src/gds-upgrade/sass/_tables.scss
+++ b/src/gds-upgrade/sass/_tables.scss
@@ -8,6 +8,7 @@
 }
 
 .custom-table {
+  width: 100%;
   border-spacing: 0;
   border-top: 1px solid map.get($govuk-colours, "black");
   border-bottom: 2px solid map.get($govuk-colours, "black");
