Moving cursor-pointer class to gds-upgrade folder

--- a/src/gds-upgrade/sass/_layout.scss
+++ b/src/gds-upgrade/sass/_layout.scss
@@ -275,3 +275,8 @@ img.spacing {
   border-radius: 5px;
   padding: 15px;
 }
+
+// to force the cursor type when required
+.cursor-pointer {
+  cursor: pointer;
+}
