New class for extra padding in govuk-table__row

--- a/src/gds-upgrade/sass/components/_table.scss
+++ b/src/gds-upgrade/sass/components/_table.scss
@@ -1,6 +1,10 @@
 .govuk-table__row {
+
     & .govuk-table__cell {
         vertical-align: middle;
+    }
+
+    &.extra-padding .govuk-table__cell {
         padding-top: govuk-spacing(4);
         padding-bottom: govuk-spacing(4);
     }
