--- a/src/gds-upgrade/sass/_tables.scss
+++ b/src/gds-upgrade/sass/_tables.scss
@@ -128,3 +128,20 @@
     }
   }
 }
+
+// custom width
+.width-10 {
+  width: 10% !important
+}
+.width-20 {
+  width: 20% !important
+}
+.width-30 {
+  width: 30% !important
+}
+.width-40 {
+  width: 40% !important
+}
+.width-50 {
+  width: 50% !important
+}
