--- a/src/gds-upgrade/sass/components/_table.scss
+++ b/src/gds-upgrade/sass/components/_table.scss
@@ -8,4 +8,27 @@
         padding-top: govuk-spacing(4);
         padding-bottom: govuk-spacing(4);
     }
+
+    // custom width
+    .width-10 {
+        width: 10% !important
+    }
+    .width-20 {
+        width: 20% !important
+    }
+    .width-30 {
+        width: 30% !important
+    }
+    .width-40 {
+        width: 40% !important
+    }
+    .width-50 {
+        width: 50% !important
+    }
+    .width-35 {
+        width: 35% !important
+    }
+    .width-65 {
+        width: 65% !important
+    }
 }
