Updated .close-button style

--- a/src/gds-upgrade/sass/components/_notification-banner.scss
+++ b/src/gds-upgrade/sass/components/_notification-banner.scss
@@ -1,9 +1,8 @@
 .govuk-notification-banner {
   & .govuk-notification-banner__header {
     .close-button {
-      color:  #fff;
-      font-size: 1.2rem;
-      font-weight: bold;
+      @include govuk-font(19, $weight: bold);
+      color: govuk-colour("white");
       cursor: pointer;
     }
   }
