Added text decoration none for link

--- a/src/gds-upgrade/sass/_links.scss
+++ b/src/gds-upgrade/sass/_links.scss
@@ -13,3 +13,7 @@
         border-color: govuk-colour("black");
     }
 }
+
+.govuk-link--no-underline:not(:hover):not(:active) {
+    text-decoration: none;
+}
