Updated button-link class

--- a/src/gds-upgrade/sass/pages/_search-results.scss
+++ b/src/gds-upgrade/sass/pages/_search-results.scss
@@ -42,6 +42,10 @@ ol.search-results {
   margin-bottom: 30px;
 }
 
+.filter-box-bg {
+  background: govuk-colour("light-grey");
+}
+
 .filter-box {
   background: govuk-colour("light-grey");
   margin-bottom: 15px;
