--- a/src/gds-upgrade/sass/_forms.scss
+++ b/src/gds-upgrade/sass/_forms.scss
@@ -241,7 +241,7 @@ form.show-filters {
 .button-link {
   border: none;
   background: none;
-  color: govuk-colour("blue");
+  color: $govuk-link-colour;
   text-decoration: underline;
   padding: 0;
   margin: 0;
@@ -250,7 +250,13 @@ form.show-filters {
   cursor: pointer;
   font-size: inherit;
   &:hover {
-    color: govuk-colour("light-blue");
+    color: $govuk-link-hover-colour;
+  }
+  &:visited {
+    color: $govuk-link-visited-colour;
+  }
+  &:active {
+    color: $govuk-link-active-colour;
   }
 }
 
