Updated the class name

--- a/src/gds-upgrade/sass/pages/_search-results.scss
+++ b/src/gds-upgrade/sass/pages/_search-results.scss
@@ -45,7 +45,7 @@ ol.search-results {
 .filter-box-bg {
   background: govuk-colour("light-grey");
 
-  .govuk-button--secondary {
+  .govuk-button--secondary-dark {
     background-color: #DBDAD9;
   }
 }
