--- a/src/gds-upgrade/sass/components/_notification-banner.scss
+++ b/src/gds-upgrade/sass/components/_notification-banner.scss
@@ -20,8 +20,8 @@
   min-width: 13px;
   padding: 1px 4px 0;
   border-radius: 10px;
-  color:govuk-colour("white");;
-  background: govuk-colour("red");;
+  color:govuk-colour("white");
+  background: govuk-colour("red");
   font-weight: 600;
   text-align: center;
   white-space: nowrap;
