--- a/src/gds-upgrade/sass/pages/_password.scss
+++ b/src/gds-upgrade/sass/pages/_password.scss
@@ -1,11 +1,17 @@
 .icon-remove {
   color: govuk-colour("red");
   font-weight:bold;
+  font-family: $govuk-font-family;
+  font-size: 1.1875rem;
+  line-height: 1.3157894737;
 }
 
 .icon-ok {
   color: govuk-colour("green");
   font-weight:bold;
+  font-family: $govuk-font-family;
+  font-size: 1.1875rem;
+  line-height: 1.3157894737;
 }
 
 .icon-ok::before {
