--- a/src/gds-upgrade/sass/screen.scss
+++ b/src/gds-upgrade/sass/screen.scss
@@ -27,6 +27,7 @@ $govuk-assets-path: "/gds-upgrade/";
 @import "pages/splash";
 @import "pages/requests";
 @import "pages/task-list";
+@import "pages/password";
 @import "components/custom_grid_and_cell";
 
 html, body {
