fixed code formatting

--- a/src/gds-upgrade/sass/components/_notification-banner.scss
+++ b/src/gds-upgrade/sass/components/_notification-banner.scss
@@ -12,9 +12,10 @@
   }
 
   & .govuk-notification-banner__content {
-  .wrap {
-    overflow-wrap: break-word;
-}}
+    .wrap {
+      overflow-wrap: break-word;
+    }
+  }
 }
 
 .govuk-notification-badge {
