--- a/src/gds-upgrade/sass/_tables.scss
+++ b/src/gds-upgrade/sass/_tables.scss
@@ -7,6 +7,20 @@
   }
 }
 
+.custom-manage-table {
+  th,td {
+    vertical-align: top;
+    border-bottom: 1px solid #b1b4b6;
+    padding: 10px 20px 10px 0;
+  }
+
+  tr th:last-child:not(:first-child),
+  tr td:last-child:not(:first-child) {
+  text-align: right;
+  padding: 10px 0px 10px 0;
+}
+}
+
 .custom-table {
   width: 100%;
   border-spacing: 0;
@@ -52,7 +66,7 @@
       }
     }
   }
-  
+
   th a {
     color:map.get($govuk-colours, "blue");
     text-decoration: none;
@@ -63,7 +77,7 @@
       text-decoration: underline;
     }
   }
-  
+
   th a.sorted {
     font-weight: bold;
     &:before {
@@ -80,7 +94,7 @@
     color: govuk-colour("dark-grey");
     font-style: italic;
   }
-  
+
   td span.empty-state {
     display: inline-block;
     margin-bottom: 5px;
@@ -91,13 +105,13 @@
     text-align: right;
     padding: 1em 0 .8em 1em;
   }
-    
+
   @for $i from 1 through 30 {
     .cw-#{$i * 10} {
       width: #{$i * 10}px;
     }
   }
-  
+
   @for $i from 1 through 20 {
     .cwp-#{$i * 5} {
       width: #{$i * 5%};
