NSA-6195 Update error pages to lates_GDS

--- a/src/gds-upgrade/sass/components/_notification-banner.scss
+++ b/src/gds-upgrade/sass/components/_notification-banner.scss
@@ -4,6 +4,8 @@
       @include govuk-font(19, $weight: bold);
       color: govuk-colour("white");
       cursor: pointer;
+      float: right;
+      margin-left: 1em;
     }
   }
 
