Add modal and javascript for session timeout

--- a/src/gds-upgrade/sass/screen.scss
+++ b/src/gds-upgrade/sass/screen.scss
@@ -22,6 +22,7 @@ $govuk-assets-path: "/gds-upgrade/";
 @import "support";
 @import "check-your-answers";
 @import "manage-orgs";
+@import "timeout-modal";
 @import "pages/services";
 @import "pages/search-results";
 @import "pages/splash";
