NSA-6316 User Management - Show All Users

--- a/src/gds-upgrade/sass/components/_table.scss
+++ b/src/gds-upgrade/sass/components/_table.scss
@@ -1,4 +1,7 @@
 .govuk-table {
+    & .govuk-table__body .govuk-table__header {
+        vertical-align: middle;
+    }
     & .govuk-table__row {
         & .govuk-table__cell {
             vertical-align: middle;
