Update pre-gds css

--- a/src/pre-gds/sass/screen.scss
+++ b/src/pre-gds/sass/screen.scss
@@ -15,6 +15,7 @@
 @import "support";
 @import "check-your-answers";
 @import "manage-orgs";
+@import "timeout-modal";
 @import "pages/services";
 @import "pages/search-results";
 @import "pages/splash";
