NSA-5783 -added class to vertical align top in table cell

--- a/src/gds-upgrade/sass/_tables.scss
+++ b/src/gds-upgrade/sass/_tables.scss
@@ -10,7 +10,9 @@
 .govuk-table.cell-align-top .govuk-table__body .govuk-table__row .govuk-table__cell {
   vertical-align: top;
 }
-
+.govuk-table.cell-align-top .govuk-table__row .govuk-table__cell {
+  vertical-align: top;
+}
 .custom-table {
   width: 100%;
   border-spacing: 0;
