NSA-7273 - Add css for the new filter component

--- a/src/gds-upgrade/sass/screen.scss
+++ b/src/gds-upgrade/sass/screen.scss
@@ -17,6 +17,7 @@ $govuk-assets-path: "/gds-upgrade/";
 @import "header";
 @import "typography";
 @import "navigation";
+@import "filters";
 @import "footer";
 @import "help";
 @import "support";
