NSA-7273 - Added organisation search filtering

--- a/src/gds-upgrade/sass/_filters.scss
+++ b/src/gds-upgrade/sass/_filters.scss
@@ -1,330 +1,94 @@
-
-.selected-filters-background {
-	background-color: #f3f2f1;
-	padding-bottom: 20px;
+:root {
+  --main-bg-color: #f3f2f1;
+  --main-text-color: #0b0c0c;
+  --main-border-color: #0b0c0c;
+  --lightgray: lightgrey;
+  --white: #fff;
 }
-.filter-header {
+
+.dfe-hidden {
+  display: none;
+}
+
+.dfe-right-align {
+  float: right;
+}
+
+.dfe-selected-filters-background {
+  background-color: var(--main-bg-color);
+  padding-bottom: 20px;
+}
+
+.dfe-filter-header {
   background-color: govuk-colour("mid-grey");
   padding: govuk-spacing(2) govuk-spacing(2) govuk-spacing(2);
   text-align: justify;
 }
 
-.filterContainer .govuk-accordion__section-button {
-	padding-bottom: 0px;
+.dfe-filter-scroll {
+  overflow: scroll;
+  height: calc(95vh);
 }
 
-.filterScroll {
-	overflow: scroll;
-	height: calc(95vh);
-}
+.dfe-filters-selected {
+  & .filter__tag {
+    background-color: var(--white);
+    border: 1px solid var(--main-border-color);
+    display: inline-block;
+    margin-top: 5px;
+    padding: 5px;
+    text-decoration: none;
 
-.filterContainer .govuk-accordion__section--expanded .govuk-accordion__section-button {
-	padding-bottom: 0px;
-}
+    &:link,
+    &:visited {
+      color: var(--main-text-color);
+    }
 
-.filterContainer .js-enabled .govuk-accordion__section--expanded .govuk-accordion__section-button {
-	padding-bottom: 0px;
-}
+    &:hover {
+      cursor: pointer;
+      color: var(--main-text-color);
+      background: var(--lightgray);
+    }
 
-.filterContainer .govuk-form-group {
-	margin-bottom: 0px;
-}
+    &:after {
+      width: 10px;
+      height: 10px;
+      margin-left: 5px;
+      vertical-align: middle;
+      font-weight: bold;
+      display: inline-block;
+      background-image: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" width="10" height="10" viewBox="0 0 10 10"><path d="M10 1.01L8.99 0 5 3.99 1.01 0 0 1.01 3.99 5 0 8.99 1.01 10 5 6.01 8.99 10 10 8.99 6.01 5 10 1.01z"/></svg>');
+      content: "";
+    }
+  }
 
+  & .filter-tags {
+    padding-left: 0px;
+    margin-top: 5px;
+  }
 
-.filterContainer .govuk-form-group .govuk-form-group:last-of-type {
-	padding-left: 10px;
-	padding-right: 10px;
-	margin-bottom: 0px;
-}
-
-.filterContainer .filterLabel {
-	margin-top: 5px;
-}
-
-.filterContainer .js-enabled .govuk-accordion__section-content {
-	padding-bottom: 0px;
-}
-
-.filterContainer .filterSearch {
-	padding-left: 0px;
-	padding-right: 0px;
-}
-
-.filterContainer .govuk-accordion__controls {
-	padding-top: 10px;
-}
-
-.filterContainer .showOneSection .govuk-accordion__controls {
-	padding-top: 10px;
-	display: none;
-}
-
-
-.filtersSelected .filter__tag:link, .filter__tag:visited {
-	color: #0b0c0c;
-}
-
-.filtersSelected .filter__tag {
-	background-color: #fff;
-	border: 1px solid #0b0c0c;
-	display: inline-block;
-	margin-top: 5px;
-	padding: 5px;
-	text-decoration: none;
-}
-
-.filtersSelected a:hover {
- cursor: pointer;
- color: #0b0c0c;
- background: lightgray;
-}
-
-
-.filtersSelected .filter-tags {
-	padding-left: 0px;
-	margin-top: 5px;
-}
-
-.filtersSelected .filter__tag:after {
-	width: 10px;
-	height: 10px;
-	margin-left: 5px;
-	vertical-align: middle;
-	font-weight: bold;
-	display: inline-block;
-	background-image: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" width="10" height="10" viewBox="0 0 10 10"><path d="M10 1.01L8.99 0 5 3.99 1.01 0 0 1.01 3.99 5 0 8.99 1.01 10 5 6.01 8.99 10 10 8.99 6.01 5 10 1.01z"/></svg>');
-
-	content: "";
-	}
-
-.filtersSelected .filter__tag:link, .filter__tag:visited {
-	color: #0b0c0c;
-}
-
-.filtersSelected .clearTags {
-	display: none;
-}
-
-.filterSelected .hidden {
-	display: none;
-}
-
-.filtersSelected .selectedText {
-	margin-left: 40px;
-}
-
-
-.filtersSelected .js-enabled .govuk-accordion__section-summary {
-	margin-bottom: 12px;
-}
-
-.right-align {
-    float: right;
-}
-
-
-.hidden {
+  & .clearTags {
     display: none;
+  }
+
+  & .selectedText {
+    margin-left: 40px;
+  }
+
+  & .js-enabled .govuk-accordion__section-summary {
+    margin-bottom: 12px;
+  }
 }
 
-
-.arrowChange {
-	transform: rotateX(180deg);
+.dfe-filter-search {
+  padding-left: 10px;
+  padding-right: 10px;
 }
 
-
-.hiddenCheckboxes {
-    cursor: pointer;
+.dfe-filter-by-container {
+  border: solid 1px var(--lightgray);
 }
 
-.hiddenCheckboxes:hover{
-    background: #F8F8F8;
-    outline: 3px solid #FFBF47;
-}
-
-.hiddenCheckboxes:focus {
-    background: #F8F8F8;
-    outline: 3px solid #FFBF47;
-}
-
-.checkboxExpand {
-    margin-top: 10px;
-}
-
-.checkboxExpanded {
-    -ms-transform: rotate(180deg);
--moz-transform: rotate(180deg);
--webkit-transform: rotate(180deg);
-transform: rotate(180deg);
-}
-
-.filterbyHeading {
-    text-align: left;
-    border: none;
-    box-shadow: none;
-}
-
-.filterbyHeading:hover {
-    background-color: #dbdad9;
-    text-align: left ;
-    border-color: #fd0;
-}
-
-.filterbyHeading:active {
-    background-color: #dbdad9;
-    text-align: left ;
-    border-color: #fd0;
-}
-
-dd {
-margin-inline-start: 10px;
-}
-
-///
-
-.filterSearch {
-	padding-left: 10px;
-	padding-right: 10px;
-}
-
-.filterLabel {
-	font-size: 16px;
-	color: grey;
-	margin-top: 10px;
-}
-
-.filterSearchInput {
-	border-color: black;
-}
-
-div.filter-content {
-	display: none;
-}
-
-
-.filterbyContainer {
-	border: solid 1px lightgrey;
-}
-
-.filterbyHeading {
-	background-color: lightgrey;
-	width: 100%;
-	padding: 6px;
-	margin-bottom: 0px;
-	cursor: pointer;
-
-	h4 {
-		margin-bottom: 0px;
-	}
-}
-
-.filterbyCheckbox {
-	padding-left: 10px;
-}
-
-
-.filterbyCheckbox-autoheight {
-	padding-left: 10px;
-}
-
-.hidden {
-	display: none;
-}
-
-.hiddenCheckboxes {
-	cursor: pointer;
-}
-
-.hiddenCheckboxes:hover{
-	background: #F8F8F8;
-	outline: 3px solid #FFBF47;
-}
-
-.hiddenCheckboxes:focus {
-	background: #F8F8F8;
-	outline: 3px solid #FFBF47;
-}
-
-.checkboxExpand {
-	margin-top: 10px;
-}
-
-.checkboxExpanded {
-	-ms-transform: rotate(180deg);
--moz-transform: rotate(180deg);
--webkit-transform: rotate(180deg);
-transform: rotate(180deg);
-}
-
-.filterbyHeading {
-	text-align: left;
-	border: none;
-	box-shadow: none;
-}
-
-.filterbyHeading:hover {
-	background-color: #dbdad9;
-	text-align: left ;
-	border-color: #fd0;
-}
-
-.filterbyHeading:active {
-	background-color: #dbdad9;
-	text-align: left ;
-	border-color: #fd0;
-}
-
-dd {
-margin-inline-start: 10px;
-}
-
-.hidden {
-	display: none;
-}
-
-.hiddenCheckboxes {
-	cursor: pointer;
-}
-
-.hiddenCheckboxes:hover{
-	background: #F8F8F8;
-	outline: 3px solid #FFBF47;
-}
-
-.hiddenCheckboxes:focus {
-	background: #F8F8F8;
-	outline: 3px solid #FFBF47;
-}
-
-.checkboxExpand {
-	margin-top: 10px;
-}
-
-.checkboxExpanded {
-	-ms-transform: rotate(180deg);
--moz-transform: rotate(180deg);
--webkit-transform: rotate(180deg);
-transform: rotate(180deg);
-}
-
-.filterbyHeading {
-	text-align: left;
-	border: none;
-	box-shadow: none;
-}
-
-.filterbyHeading:hover {
-	background-color: #dbdad9;
-	text-align: left ;
-	border-color: #fd0;
-}
-
-.filterbyHeading:active {
-	background-color: #dbdad9;
-	text-align: left ;
-	border-color: #fd0;
-}
-
-dd {
-margin-inline-start: 10px;
+.dfe-filter-by-checkbox {
+  padding-left: 10px;
 }
