Added css for custom details component to toggle text when actioned

--- a/src/gds-upgrade/sass/screen.scss
+++ b/src/gds-upgrade/sass/screen.scss
@@ -11,6 +11,7 @@ $govuk-assets-path: "/gds-upgrade/";
 @import "links";
 @import "components";
 @import "components-pre-gds";
+@import "details";
 @import "forms";
 @import "tables";
 @import "notifications";
