--- a/app/pre-gds/views/concepts/portal/services-v2.html
+++ b/app/pre-gds/views/concepts/portal/services-v2.html
@@ -1,26 +1,23 @@
-{% extends "layout.html" %}
-
-{% block content %}
+{% extends "layout.html" %} {% block content %}
 <div class="grid-row">
-  <div class="column-two-thirds">
-
-  </div>
+  <div class="column-two-thirds"></div>
 </div>
 <div class="grid-row">
   <div class="col-8">
-    <h1 class="heading-xlarge">
-      Access DfE services
-    </h1>
+    <h1 class="heading-xlarge">Access DfE services</h1>
     <div class="heading-group">
-    <h2 class="heading-medium">
-      Your DfE services <span class=""> <a href="viewall">View available DfE services</a></span>
-    </h2>
-  </div>
+      <h2 class="heading-medium">
+        Your DfE services
+        <span class=""> <a href="viewall">View available DfE services</a></span>
+      </h2>
+    </div>
     <ul class="service-list-blocks">
       <li>
         <a href="dd" class="service service-k2s">
           <h2>Key to Success</h2>
-          <p>Service approver is Greg Sanders (greg.sanders@stpatricks.co.uk)</p>
+          <p>
+            Service approver is Greg Sanders (greg.sanders@stpatricks.co.uk)
+          </p>
         </a>
         <a href="manage" class="manage">
           Manage access and users for Key to Success
@@ -28,54 +25,60 @@
       </li>
       <li>
         <a class="service service-collect" href="ss#">
-            <h2>COLLECT</h2>
-            <p>Service approver is Greg Sanders (greg.sanders@stpatricks.co.uk)</p>
+          <h2>COLLECT</h2>
+          <p>
+            Service approver is Greg Sanders (greg.sanders@stpatricks.co.uk)
+          </p>
         </a>
       </li>
       <li>
         <a class="service service-gias" href="aa">
           <h2>Get information about schools</h2>
-          <p>Service approver is Greg Sanders (greg.sanders@stpatricks.co.uk)</p>
+          <p>
+            Service approver is Greg Sanders (greg.sanders@stpatricks.co.uk)
+          </p>
         </a>
       </li>
     </ul>
 
-    <h3 class="heading-medium">You have requested access to the following services</h3>
+    <h3 class="heading-medium">
+      You have requested access to the following services
+    </h3>
     <h4 class="heading-small school">Saint Patricks School</h4>
     <ul class="service-list-table">
       <li class="service-mtc">
         <p>Multiplication tables check</p>
-        <span>Request sent to Steve Jones (steve.jones@stpatricks.co.uk) on 30th October 2017</span>
+        <span
+          >Request sent to Steve Jones (steve.jones@stpatricks.co.uk) on 30th
+          October 2017</span
+        >
       </li>
       <li class="service-eb">
         <p>Edubase</p>
-        <span>Request sent to Steve Jones (steve.jones@stpatricks.co.uk) on 30th October 2017</span>
+        <span
+          >Request sent to Steve Jones (steve.jones@stpatricks.co.uk) on 30th
+          October 2017</span
+        >
       </li>
     </ul>
-
-
   </div>
   <div class="col-3">
     <h3 class="heading-medium details-heading">Your details</h3>
-   <ul class="list">
-      <li><a href=change">Change your password</a></li>
+    <ul class="list">
+      <li><a href="change">Change your password</a></li>
       <li><a href="edit">Edit your details</a></li>
-   </ul>
+    </ul>
   </div>
 </div>
 
-{% endblock %}
-
-
-{% block styles %}
+{% endblock %} {% block styles %}
 
 <style>
-
   h2 span {
     display: inline-block;
     font-size: 80%;
     float: right;
-    font-weight:normal;
+    font-weight: normal;
   }
 
   a.card {
@@ -83,7 +86,7 @@
   }
 
   a.service-k2s {
-    border-left-color: #24651D !important;
+    border-left-color: #24651d !important;
   }
   a.service-gias {
     border-left-color: #005ea5 !important;
@@ -103,7 +106,7 @@
   }
 
   ul.service-list li p {
-    font-weight:bold;
+    font-weight: bold;
     margin: 0;
   }
 
@@ -117,8 +120,7 @@
   }
 
   ul.service-list-table {
-
-   }
+  }
 
   ul.service-list-table li {
     padding: 10px 0;
@@ -126,9 +128,9 @@
   }
 
   ul.service-list-table li p {
-     font-weight: bold;
-      margin:0;
-   }
+    font-weight: bold;
+    margin: 0;
+  }
 
   ul.service-list-table li span {
     font-size: 17px;
@@ -136,7 +138,6 @@
   }
 
   ul.service-list-blocks {
-
   }
 
   ul.service-list-blocks li {
@@ -153,7 +154,7 @@
 
   ul.service-list-blocks li a.service h2 {
     text-decoration: none;
-    font-weight:bold;
+    font-weight: bold;
     color: #0b0c0c;
   }
 
@@ -170,7 +171,7 @@
     display: block;
     margin-top: 2px;
     font-size: 17px;
-    border-left: 5px solid #24651D;
+    border-left: 5px solid #24651d;
   }
 
   ul.service-list-blocks li a:hover {
@@ -188,7 +189,6 @@
     margin-bottom: 15px;
     padding-bottom: 10px;
   }
-
 </style>
 
 {% endblock %}
