Cancel out additional spacing introduced by `home-top`.

--- a/src/gds-upgrade/sass/_header.scss
+++ b/src/gds-upgrade/sass/_header.scss
@@ -10,6 +10,10 @@
     color: #fff !important;
   }
 
+  & .govuk-heading-m {
+    margin-bottom: govuk-spacing(2);
+  }
+
   a:active {
     color: $govuk-text-colour !important;
   }
