--- a/src/gds-upgrade/sass/components/_header.scss
+++ b/src/gds-upgrade/sass/components/_header.scss
@@ -1,4 +1,5 @@
 // make the last element (sign out) go to the end of the container
+// leave old version to enable gradual rollout of design system changes
 .govuk-header {
   &__navigation {
     @include govuk-clearfix;
@@ -19,4 +20,16 @@
 // bold font for the Menu toggle
 .govuk-js-header-toggle {
   font-weight: bold;
+}
+
+// make the last element (sign out) go to the end of the container
+.govuk-service-navigation__item:last-child {
+  flex-grow: 1;
+  text-align: right;
+
+  // except when we have the menu (small screens), then show aligned with the others
+  @include govuk-media-query($until: desktop) {
+    flex-grow: inherit;
+    text-align: inherit;
+  }
 }
